# ADRIFT

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main  main.c  test.ipynb  threadpool.h
pthread/: threadpool.c
src/: main.c  main1.c
src/cli/: parse.c  parse.h
src/ds/: hash.h  hash_map.h  list.h  trie.h
src/protocol/: cache.c  cache.h  handle.c  handle.h  protocol.c  protocol.h
src/rwlock/: rwlock.c  rwlock.h
src/thread/: threadpool.c  threadpool.h
src/util/: constant.h  ipv4addr.h  log.c  log.h  time.c  time.h  type.h
test/: dnsperf.txt  dnsrelay.txt
